# libmonome

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  monome.pyx  pyproject.toml  setup.py
bindings/python/: monome.pyx  setup.py
public/: monome.h
src/: libmonome.c  monome.pyx
src/platform/: darwin.c  linux.c  posix.c  windows.c
src/private/: internal.h
src/pymonome/: monome.pyx
tests/: test_core.c  test_monobright.c  test_poll_group.c  test_rotation.c
